--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -136,7 +136,6 @@ label{
 	padding: 16px;
 	font-size: 16px;
 	border: none;
-	grid-area: menu;
 }
 
 .dropdown-index {	
@@ -148,7 +147,7 @@ label{
   display: none;
   background-color: #f1f1f1;
   min-width: 160px;
-  z-index: 1;
+  flex-direction: column;
 }
 
 .dropdown-content-index a {
@@ -197,7 +196,6 @@ label{
 	display: flex;
 	flex-wrap: wrap;
 	flex-direction: column;
-	align-content: auto;
 	background-image: url("../img/background.jpg");
 }
 
