--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -42,7 +42,6 @@ a:hover {
 .nav-li{
 	float: left;
 	padding-left: 25px;
-	margin-left: none;
 	list-style: none;
 }
 
@@ -76,7 +75,6 @@ img{
 
 
 label{
-	float: top;
 	margin-right: 20px;
 }
 
@@ -187,8 +185,8 @@ label{
 
 #index-aside{
 	display: flex;
-	justify-content: space-evenly;
 	align-items: flex-start;
+	flex-direction: column;
 	margin-right: 4%;
 }
 
@@ -270,7 +268,6 @@ label{
 	grid-area: banner;
 	height: 150px;
 	width: 150px; 
-    float : center;
 }
 
 .grid-header-title{
@@ -290,7 +287,6 @@ label{
 	display: grid;
 	grid-template-columns: 1.5fr 1fr 1fr;
 	grid-template-rows: 0.5fr 0.5fr 0.5fr 0.5fr 0.5fr 0.5fr 0.5fr; 
-	gap: 1fr;
 	grid-template-areas:  
 	'article-2 article-1 article-3'
     'article-2 article-1 article-3'
